--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -80,6 +80,7 @@ margin-left: 20rpx;
   font-size: 25rpx;
   margin-left: 20rpx;
   margin-bottom: 10rpx;
+  padding: 5rpx;
 }
 .add1 {
 }
@@ -91,7 +92,7 @@ margin-left: 20rpx;
 .nutrients {
   display: flex;
   height: 100rpx;
-  border-bottom: 1px solid rgba(0,0,0,0.2);
+  padding:6rpx;
 }
 .nutrient-icon {
   width: 10%;
@@ -108,6 +109,9 @@ margin-left: 20rpx;
 }
 .data {
   width: 25%;
+  position:relative;
+  top:25%;
+
 }
 .face-nutrient {
   width: 10%;
@@ -117,3 +121,17 @@ margin-left: 20rpx;
   width: 80rpx;
   height: 80rpx;
 } 
+
+.card_container {
+   border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+
+.range{
+  display:flex;
+  justify-content: space-between;
+}
+
+.calories_bar {
+  margin: 10rpx 40rpx;
+  font-size: 14px;
+}
