--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -45,26 +45,32 @@
     </view>
     <view class="nutrient-text">
       <view class="h3">Calories</view>
-    <!-- If statement here: if nutrition_grade = a transform into good/mediumm...-->
       <view class="h4">{{food.calories_nutrient_level}}</view>
     </view>
     <view class="data">{{food.calories_quantity}} kcal</view>
     <view class="face-nutrient">
-<view wx:if="{{food.calories_nutrient_level == 'very_low'}}"><image class="fac" src="/images/smiley-good.png"></image></view>
-  <view wx:if="{{food.calories_nutrient_level == 'low'}}"><image class="fac" src="/images/smiley-good.png"></image></view>
-  <view wx:elif="{{food.calories_nutrient_level == 'moderate'}}"><image class="fac" src="/images/smiley-medium.png"></image></view>
-  <view wx:elif="{{food.calories_nutrient_level == 'high'}}"><image class="fac" src="/images/smiley-bad.png"></image></view>
+      <view wx:if="{{food.calories_nutrient_level == 'very_low'}}">
+        <image class="fac" src="/images/smiley-good.png"></image>
+      </view>
+      <view wx:if="{{food.calories_nutrient_level == 'low'}}">
+        <image class="fac" src="/images/smiley-good.png"></image>
+      </view>
+      <view wx:elif="{{food.calories_nutrient_level == 'moderate'}}">
+        <image class="fac" src="/images/smiley-medium.png"></image>
+      </view>
+      <view wx:elif="{{food.calories_nutrient_level == 'high'}}">
+        <image class="fac" src="/images/smiley-bad.png"></image>
+      </view>
     </view>
   </view>
   <view class='calories_bar'>
-  <view>
-      <view class='range' wx:if="{{food.category == 'beverage'}}">
-        <view>0</view><view>1</view><view>14</view><view>35</view><view>65</view>
-      </view>
-      <view class='range' wx:else>            <view>0</view><view>160</view><view>360</view><view>560</view><view>800</view>
-      </view>
- </view>
- <view>
+    <view class='range' wx:if="{{food.category == 'beverage'}}">
+      <view>0</view><view>1</view><view>14</view><view>35</view><view>65</view>
+    </view>
+    <view class='range' wx:else><view>0</view><view>160</view>
+      <view>360</view><view>560</view><view>800</view>
+    </view>
+ <view class='progress_bar'>
     <view wx:if="{{food.calories_percentage < '25'}}">
         <progress percent="{{food.calories_percentage}}" stroke-width="10"  color="#3ca860" active />
     </view>
@@ -144,7 +150,7 @@
 </view>
 
 
-<view wx:if="{{food.fiber_nutriment_level != null}}">
+<view wx:if="{{food.fiber_nutrient_level != null}}">
   <view class="card_container">
     <view class="nutrients">
         <view class="nutrient-icon">
@@ -156,14 +162,19 @@
         </view>
         <view class="data">{{food.fiber_quantity}} g</view>
         <view class="face-nutrient">
+          <view wx:if="{{food.fiber_nutrient_level == 'high'}}">
             <image class="fac" src="/images/smiley-good.png"></image>
+          </view>
+          <view wx:if="{{food.fiber_nutrient_level == 'very_high'}}">
+            <image class="fac" src="/images/smiley-very-good.png"></image>
+          </view>
         </view>
     </view>
   </view>
 </view>
 
 
-<view wx:if="{{food.protein_nutriment_level != null}}">
+<view wx:if="{{food.protein_nutrient_level != null}}">
   <view class="card_container">
     <view class="nutrients">
       <view class="nutrient-icon">
@@ -175,7 +186,12 @@
       </view>
       <view class="data">{{food.protein_quantity}} g</view>
       <view class="face-nutrient">
+        <view wx:if="{{food.protein_nutrient_level == 'high'}}">
           <image class="fac" src="/images/smiley-good.png"></image>
+        </view>
+        <view wx:if="{{food.protein_nutrient_level == 'very_high'}}">
+          <image class="fac" src="/images/smiley-very-good.png"></image>
+        </view>      
       </view>
     </view>
   </view>
