--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -131,7 +131,7 @@ margin-left: 20rpx;
   justify-content: space-between;
 }
 
-.calories_bar {
+.percentage_bar {
   margin: 10rpx 40rpx;
-  font-size: 16rpx;
+  font-size: 30rpx;
 }
