--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -179,7 +179,7 @@
       <view class="h3">Salt</view>
       <view class="h4">{{food.salt_nutrient_level}}</view>
     </view>
-    <view class="data">{{food.salt_quantity}} g</view>
+    <view class="data">{{food.salt_quantity}} mg</view>
     <view class="face-nutrient">
       <view wx:if="{{food.salt_nutrient_level == 'low'}}"><image class="fac" src="/images/smiley-good.png"></image></view>
       <view wx:elif="{{food.salt_nutrient_level == 'moderate'}}"><image class="fac" src="/images/smiley-medium.png"></image></view>
@@ -188,7 +188,7 @@
   </view>
   <view class='percentage_bar'>
     <view class="range">
-      <view>0</view><view>0.46</view><view>0.92</view><view>1.62</view><view>2.3+</view>
+      <view>0</view><view>46</view><view>92</view><view>62</view><view>230+</view>
     </view>
     <view class='progress_bar'>
         <view wx:if="{{food.salt_percentage < '25'}}">
