lets start the event

--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -1,4 +1,8 @@
-<!-- Product Header-->
+<navigator open-type="navigateBack"
+    url="../favorite/favorite"
+    hover-class="navigator-hover"
+  >hello
+  </navigator><!-- Product Header-->
 
 <view class="product-header">
   <view class="image">
