--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -12,7 +12,7 @@
       <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
       <block wx:else>
         <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-        <button bindtap="bindViewTap">Scan Now</button>
+        <button class='btn' bindtap="bindViewTap">Scan Now</button>
       </block>
   </view>
 </view>
