--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -37,10 +37,11 @@
   margin-top: 30rpx;
 }
 .faces {
-  width: 80rpx;
-  height: 80rpx;
-  margin-left: 30rpx;
-  margin-top: 119rpx;
+height:130rpx;
+width:130rpx;
+position:fixed;
+top:80px;
+right:45rpx;
 }
 .star {
   margin-left: 10rpx;
@@ -52,10 +53,12 @@
 /* Finish header */
 .divider1 {
   height: 45rpx;
-  padding: 10rpx;
+  padding: 17rpx;
   background-color: #8AE16C;
   color: white;
   font-weight: bold;
+  padding-top:10rpx;
+
 }
 .header {
   font-size:30rpx;
@@ -69,7 +72,6 @@
   font-weight: bold;
 }
 .ingredients {
-  display: flex;
 }
 .h3 {
 font-size: 40 rpx;
@@ -93,6 +95,8 @@ margin-left: 20rpx;
   display: flex;
   height: 100rpx;
   padding:6rpx;
+  margin-bottom:25rpx;
+
 }
 .nutrient-icon {
   width: 10%;
@@ -100,6 +104,9 @@ margin-left: 20rpx;
 .nutrient-text {
   width: 40%;
   padding-left: 70rpx;
+  position:relative;
+  top:10rpx;
+
 }
 .icons {
   margin-top: 15rpx;
@@ -108,9 +115,12 @@ margin-left: 20rpx;
   height: 80rpx;
 }
 .data {
-  width: 25%;
-  position:relative;
-  top:25%;
+width:25%;
+position:relative;
+top:22%;
+text-align:right;
+padding-right:-25px;
+right:28rpx;
 
 }
 .face-nutrient {
@@ -134,4 +144,29 @@ margin-left: 20rpx;
 .percentage_bar {
   margin: 10rpx 40rpx;
   font-size: 30rpx;
+}
+
+.allergens-subdiv {
+  display: flex;
+  padding: 5rpx;
+}
+
+.h5 {
+  position:relative;
+  top:24rpx;
+  font-size:27rpx;
+  margin-left:22rpx;
+}
+
+.allergens-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.dropdown {
+  margin-right: 3rpx;
+  width: 80rpx;
+  height: 80rpx;
+  position: relative;
+  top: -8rpx;
 }
