--- a/pages/favorite/favorite.wxml
+++ b/pages/favorite/favorite.wxml
@@ -20,7 +20,7 @@
 </view>
 
 
-  <view class="header">Favorites</view>
+  
 
 
 
@@ -33,8 +33,8 @@
 -->
 
 <!-- card dual -->  
-
-<view class="card-dual">
+<view id='hello' bindtap='hello' class="header">Favorites</view>
+<view id='card-dual' class="card-dual">
   <view class="card-product">
    <progress percent="{{very_good_nutrition_percentage}}" stroke-width="10"  color="#4fff54" active show-info/>
     <view class="image">
@@ -68,6 +68,8 @@
 
 
 
-
-
+<view bindtap='hello'>click me</view>
+<view wx:if="{{active == '2'}}">
+say hello
+</view>
 
