--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -55,6 +55,7 @@
   box-shadow: 0 0 30rpx rgba(0,0,0,0.2);
   padding: 20rpx;
   margin: 20rpx;
+  position: relative;
 }
 .image {
   margin: 10rpx 25rpx 25rpx 25rpx ;
@@ -65,12 +66,14 @@
   height:230rpx;
 }
 .h2 {
+  
   font-size:31rpx;
   font-weight:bold;
   position:relative;
   top:-15rpx;
 }
 .p {
+
 font-size:27rpx;
 opacity:.7;
 margin-bottom:0;
@@ -79,20 +82,21 @@ position:relative;
 top:-26rpx;
 }
 .classification {
+
 font-size:33rpx;
 opacity:.8;
-position:relative;
+position:absolute;
 bottom:9rpx;
 display: flex;
 justify-content: space-between;
-
 }
 .card-product-infos {
 }
+
 .dot {
 width:55rpx;
 height:55rpx;
-margin-right:10px
+margin-left:20rpx;
 }
 
 .scan-container {
