--- a/pages/favorite/favorite.wxml
+++ b/pages/favorite/favorite.wxml
@@ -34,9 +34,29 @@
 
 <!-- card dual -->  
 <view id='hello' bindtap='hello' class="header">Favorites</view>
+
+
 <view id='card-dual' class="card-dual">
+<view wx:for="{{favorites}}" wx:for-item="favorite" wx:key="favorite.id">
+
+
   <view class="card-product">
-   <progress percent="{{very_good_nutrition_percentage}}" stroke-width="10"  color="#4fff54" active show-info/>
+    <view class="image">
+      <image src="{{favorite.image_url}}" class="product-img"></image> 
+    </view>
+    <view class="info-n-smiley">
+      <view class="card-product-infos">
+        <view class="h2">{{favorite.product_name}}</view>
+        <view class="p">{{favorite.brand}}</view>
+        <view class="classification">{{favorite.nutrition_grade}}
+          <image class="dot" src="/images/green-dot.png"></image> 
+          </view>
+          </view>
+        </view>
+      </view>
+    </view>
+    </view>
+  <!-- <view class="card-product">
     <view class="image">
       <image src="https://picsum.photos/200/300" class="product-img"></image> 
     </view>
@@ -50,21 +70,7 @@
       </view>
     </view>
   </view>
-  <view class="card-product">
-    <view class="image">
-      <image src="https://picsum.photos/200/300" class="product-img"></image> 
-    </view>
-    <view class="info-n-smiley">
-      <view class="card-product-infos">
-        <view class="h2">Product Name</view>
-        <view class="p">Brand</view>
-        <view class="classification">Medium
-          <image class="dot" src="/images/green-dot.png"></image> 
-        </view>
-      </view>
-    </view>
-  </view>
-</view>
+ -->
 
 
 
