--- a/pages/form/form.wxml
+++ b/pages/form/form.wxml
@@ -1,65 +1,89 @@
+<view class="contain">
   <view class="header">
     <view class="h2-header">Submit A Product</view>
   </view>
 
-  <view class="contain">
-    <view class="wrap">
-      <form bindsubmit="bindSubmit">
 
-        <view class="section section_gap">
-          <view class="section__title">Category</view>
+  <view class="wrap">
+    <form bindsubmit="bindSubmit">
+      <view class="section_gap">
+        <view class="section__title">Category</view>
+        <view class="select">
           <radio-group name="radio-group">
             <label><radio value="food"/>Food</label>
-            <label><radio value="beverage"/>Beverage</label>
-            <label><radio value="other"/>Other</label>
+            <label class="bevarage"><radio value="beverage"/>Beverage</label>
+            <label class="bevarage"><radio value="other"/>Other</label>
           </radio-group>
         </view>
+      </view>
 
-        <view class="user-input">
-          <view class="text-area-wrap">
-          <textarea value="{{name}}" style="input-size" placeholder="Product Name" class="input-height" name="name" maxlength="-1" auto-height />
-          </view>
+      <view class="user-input">
+        <view class="text-area-wrap">
+        <textarea value="{{name}}" style="input-size" placeholder="Product Name" class="input-height" name="name" maxlength="-1" auto-height />
         </view>
+      </view>
 
-        <view class="user-input">
-          <view class="text-area-wrap">
-          <textarea value="{{brand}}" style="input-size"placeholder="Brand" class="input-height" name="brand" maxlength="-1" auto-height />
-          </view>
+      <view class="user-input">
+        <view class="text-area-wrap">
+        <textarea value="{{brand}}" style="input-size"placeholder="Brand" class="input-height" name="brand" maxlength="-1" auto-height />
         </view>
+      </view>
 
-        <view class="section section_gap">
+      <view class="user-input">
+        <view class="text-area-wrap">
+        <textarea value="{{ingredients}}" style="input-size"placeholder="Ingredients" class="input-height" name="ingredients" maxlength="-1" auto-height />
+        </view>
+      </view>
+
+      <view class="section section_gap">
+        <view class="title-img">
+          <image class="icons" src="/images/calories_icon.png"></image>
           <view class="section__title">Calories</view>
-          <slider name="calories_slider" show-value step="1" min="0" max="1200" ></slider>
         </view>
-        <view class="section section_gap">
-           <view class="section__title">Sugar</view>
-          <slider name="sugar_slider" show-value step="0.1" min="0" max="100" ></slider>
+        <slider name="calories_slider" show-value step="1" min="0" max="1200" ></slider>
+      </view>
+      <view class="section section_gap">
+        <view class="title-img">
+          <image class="icons" src="/images/sugar_icon.png"></image>
+          <view class="section__title">Sugar</view>
         </view>
-        <view class="section section_gap">
+        <slider name="sugar_slider" show-value step="0.1" min="0" max="100" ></slider>
+      </view>
+      <view class="section section_gap">
+        <view class="title-img">
+          <image class="icons" src="/images/fat_icon.png"></image>
           <view class="section__title">Saturated Fat</view>
-          <slider name="saturated_fat_slider" show-value step="0.1" min="0" max="25" ></slider> 
         </view>
-        <view class="section section_gap">
+        <slider name="saturated_fat_slider" show-value step="0.1" min="0" max="25" ></slider> 
+      </view>
+      <view class="section section_gap">
+        <view class="title-img">
+          <image class="icons" src="/images/fiber_icon.png"></image>
           <view class="section__title">Fiber</view>
-          <slider name="fiber_slider" show-value step="0.1" min="0" max="10" ></slider>
         </view>
-       <view class="section section_gap">
-          <view class="section__title">salt</view>
-          <slider name="salt_slider" show-value step="0.1" min="0" max="25" ></slider>
+        <slider name="fiber_slider" show-value step="0.1" min="0" max="10" ></slider>
+      </view>
+      <view class="section section_gap">
+        <view class="title-img">
+          <image class="icons" src="/images/salt_icon.png"></image>
+          <view class="section__title">Salt</view>
         </view>
-        <view class="section section_gap">
+        <slider name="salt_slider" show-value step="0.1" min="0" max="25" ></slider>
+      </view>
+      <view class="section section_gap">
+        <view class="title-img">
+          <image class="icons" src="/images/protein_icon.png"></image>
           <view class="section__title">Protein</view>
-          <slider name="protein_slider" show-value step="0.1" min="0" max="25" ></slider>
         </view>
+        <slider name="protein_slider" show-value step="0.1" min="0" max="25" ></slider>
+      </view>
 
-        <view class="user-input">
-          <view class="text-area-wrap">
-          <textarea value="{{ingredients}}" style="input-size"placeholder="Ingredients" class="input-height" name="ingredients" maxlength="-1" auto-height />
-          </view>
-        </view>
+      
 
-        <button  style="margin-bottom:50px "type="primary" form-type="submit" loading="{{loading}}">Submit</button>
-      </form>
-    </view>
+      <button  class="submit-btn" style="margin-bottom:50px "type="primary" form-type="submit" loading="{{loading}}">Submit</button>
+    </form>
   </view>
+</view>
+
+
 
