--- a/pages/form/form.wxss
+++ b/pages/form/form.wxss
@@ -1,9 +1,22 @@
 /* pages/edit/edit.wxss */
-.h2-header {
- color: black;
+.contain {
+  
+}
+
+.header {
+  background-color: #EA7B4C;
+}
+
+.h2-header {  
+  color: white;
   font-size: 50rpx; 
   font-weight: bold;
   padding: 10px;
+  text-align: center;
+}
+
+.wrap {
+  margin: 25rpx;
 }
 /* Avatar */
 .userinfo-avatar {
@@ -37,14 +50,39 @@ textarea {
   border-left: 5px solid #9F9F9C;
 }
 
-.header{
-  position: relative;
-  left: 150rpx;
-}
-
-
 .box {
  background-color: white;
  padding: 8px;
  margin: 5px;
 }
+
+.section_gap {
+  border: 1rpx solid rgba(159, 159, 156, 0.301);
+  background-color: white;
+  padding: 20rpx;
+  border-radius: 20rpx;
+  margin-bottom: 20rpx;
+}
+
+.section__title {
+  padding-bottom: 20rpx;
+  margin-left: 10rpx;
+}
+
+.bevarage {
+ margin-left: 40rpx;
+}
+
+.submit-btn {
+  background-color: #EA7B4C;
+}
+
+.title-img {
+  display:flex;
+}
+
+.icons {
+  height: 50rpx;
+  width: 50rpx;
+}
+
