--- a/pages/form/form.wxml
+++ b/pages/form/form.wxml
@@ -1,5 +1,5 @@
 <view class="contain">
-  <view class="header">
+  <view class="header1">
     <view class="h2-header">Submit A Product</view>
   </view>
 
