--- a/pages/dashboard/dashboard.wxml
+++ b/pages/dashboard/dashboard.wxml
@@ -1,9 +1,4 @@
 
-
-
-
-
-
 <view class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('/images/background-image.jpeg');">
     <image  class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
     <view class="userinfo">
@@ -13,6 +8,10 @@
         <text class="userinfo-nickname">{{userInfo.nickName}}</text>
       </block>
     </view>
+  </view>
+
+  <view class="header1">
+    <view class="h2-header">Nutrition Overview</view>
   </view>
 
 
