--- a/pages/dashboard/dashboard.wxss
+++ b/pages/dashboard/dashboard.wxss
@@ -1,3 +1,15 @@
+
+.header1 {
+  background-color: #EA7B4C;
+}
+
+.h2-header {  
+  color: white;
+  font-size: 50rpx; 
+  font-weight: bold;
+  padding: 10px;
+  text-align: center;
+}
 .canvasDivider {
   display: flex;
   justify-content: space-around;
